frontend/test/should_fail/simple_eval_002.grg
ref ::m:map<int,int>;

rule r
{
	modify {
		eval {
			::m.add(42,42);
		}
	}
}